--- a/source/assets/css/main.css
+++ b/source/assets/css/main.css
@@ -1,94 +1,10 @@
 @font-face {
-    font-family: 'ExoThin';
-    src: url('../fonts/Exo-Thin-webfont.eot');
-    src: url('../fonts/Exo-Thin-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Thin-webfont.woff') format('woff'),
-         url('../fonts/Exo-Thin-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Thin-webfont.svg#ExoThin') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoThinItalic';
-    src: url('../fonts/Exo-Thin-Italic-webfont.eot');
-    src: url('../fonts/Exo-Thin-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Thin-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-Thin-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Thin-Italic-webfont.svg#ExoThinItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoExtraLight';
-    src: url('../fonts/Exo-ExtraLight-webfont.eot');
-    src: url('../fonts/Exo-ExtraLight-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-ExtraLight-webfont.woff') format('woff'),
-         url('../fonts/Exo-ExtraLight-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-ExtraLight-webfont.svg#ExoExtraLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoExtraLightItalic';
-    src: url('../fonts/Exo-ExtraLight-Italic-webfont.eot');
-    src: url('../fonts/Exo-ExtraLight-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-ExtraLight-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-ExtraLight-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-ExtraLight-Italic-webfont.svg#ExoExtraLightItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoLight';
-    src: url('../fonts/Exo-Light-webfont.eot');
-    src: url('../fonts/Exo-Light-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Light-webfont.woff') format('woff'),
-         url('../fonts/Exo-Light-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Light-webfont.svg#ExoLight') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoLightItalic';
-    src: url('../fonts/Exo-Light-Italic-webfont.eot');
-    src: url('../fonts/Exo-Light-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Light-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-Light-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Light-Italic-webfont.svg#ExoLightItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
     font-family: 'ExoRegular';
     src: url('../fonts/Exo-Regular-webfont.eot');
     src: url('../fonts/Exo-Regular-webfont.eot?#iefix') format('embedded-opentype'),
          url('../fonts/Exo-Regular-webfont.woff') format('woff'),
          url('../fonts/Exo-Regular-webfont.ttf') format('truetype'),
          url('../fonts/Exo-Regular-webfont.svg#ExoRegular') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoRegularItalic';
-    src: url('../fonts/Exo-Regular-Italic-webfont.eot');
-    src: url('../fonts/Exo-Regular-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Regular-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-Regular-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Regular-Italic-webfont.svg#ExoRegularItalic') format('svg');
     font-weight: normal;
     font-style: normal;
 
@@ -107,18 +23,6 @@
 }
 
 @font-face {
-    font-family: 'ExoMediumItalic';
-    src: url('../fonts/Exo-Medium-Italic-webfont.eot');
-    src: url('../fonts/Exo-Medium-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Medium-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-Medium-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Medium-Italic-webfont.svg#ExoMediumItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
     font-family: 'ExoDemiBold';
     src: url('../fonts/Exo-DemiBold-webfont.eot');
     src: url('../fonts/Exo-DemiBold-webfont.eot?#iefix') format('embedded-opentype'),
@@ -129,90 +33,6 @@
     font-style: normal;
 
 }
-
-@font-face {
-    font-family: 'ExoDemiBoldItalic';
-    src: url('../fonts/Exo-DemiBold-Italic-webfont.eot');
-    src: url('../fonts/Exo-DemiBold-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-DemiBold-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-DemiBold-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-DemiBold-Italic-webfont.svg#ExoDemiBoldItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoBold';
-    src: url('../fonts/Exo-Bold-webfont.eot');
-    src: url('../fonts/Exo-Bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Bold-webfont.woff') format('woff'),
-         url('../fonts/Exo-Bold-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Bold-webfont.svg#ExoBold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoBoldItalic';
-    src: url('../fonts/Exo-Bold-Italic-webfont.eot');
-    src: url('../fonts/Exo-Bold-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Bold-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-Bold-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Bold-Italic-webfont.svg#ExoBoldItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoExtraBold';
-    src: url('../fonts/Exo-ExtraBold-webfont.eot');
-    src: url('../fonts/Exo-ExtraBold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-ExtraBold-webfont.woff') format('woff'),
-         url('../fonts/Exo-ExtraBold-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-ExtraBold-webfont.svg#ExoExtraBold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoExtraBoldItalic';
-    src: url('../fonts/Exo-ExtraBold-Italic-webfont.eot');
-    src: url('../fonts/Exo-ExtraBold-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-ExtraBold-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-ExtraBold-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-ExtraBold-Italic-webfont.svg#ExoExtraBoldItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoBlack';
-    src: url('../fonts/Exo-Black-webfont.eot');
-    src: url('../fonts/Exo-Black-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Black-webfont.woff') format('woff'),
-         url('../fonts/Exo-Black-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Black-webfont.svg#ExoBlack') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'ExoBlackItalic';
-    src: url('../fonts/Exo-Black-Italic-webfont.eot');
-    src: url('../fonts/Exo-Black-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('../fonts/Exo-Black-Italic-webfont.woff') format('woff'),
-         url('../fonts/Exo-Black-Italic-webfont.ttf') format('truetype'),
-         url('../fonts/Exo-Black-Italic-webfont.svg#ExoBlackItalic') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-
 
 html,
 button,
@@ -298,6 +118,8 @@ blockquote {
 img#zce53 {
     float: left;
     margin: 25px 0;
+    height: 68px;
+    width: 73px;
 }
 
 
